<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context=".fragement.groups_driver">

    <!-- TODO: Update blank fragment layout -->
<!--button_add button_remove -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Group_table"
        android:layout_marginTop="50dp">

    <TableRow
        android:id="@+id/Group_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/group_name_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/group_name_et"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/Group_table"
            android:background="@drawable/rounded_view"
            android:inputType="text"
            android:padding="@dimen/QIBus_softui_spacing_large"
            android:singleLine="true"
            android:textColorHint="@color/md_grey_200"
            android:textSize="@dimen/QIBus_softui_font_large" />

    </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button_create_gruop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Group_table"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ronded_button1"
        android:text="@string/Create_group"
        android:tint="@color/white" />

    <Button
        android:id="@+id/button_change_gruop"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/button_create_gruop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ronded_button1"
        android:text="@string/change_group_name"
        android:tint="@color/white" />
    <Button
        android:id="@+id/button_my_gruops"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/button_change_gruop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ronded_button1"
        android:text="@string/my_groups"
        android:tint="@color/white" />

    <EditText

        android:id="@+id/phone_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/button_my_gruops"

        android:layout_marginBottom="2dp"
        android:background="@drawable/rounded_view"
        android:gravity="center_vertical"
        android:hint="@string/Driver_Phone_number"
        android:inputType="text"
        android:padding="@dimen/QIBus_softui_spacing_large"
        android:singleLine="true"
        android:text="+"
        android:textColorHint="@color/md_grey_200"
        android:textSize="@dimen/QIBus_softui_font_large" />
    <Button
        android:id="@+id/button_add"
        android:layout_below="@id/phone_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ronded_button1"
        android:text="@string/add_Driver"
        android:tint="@color/white" />
    <Button
        android:id="@+id/button_remove"
        android:layout_below="@id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ronded_button1"
        android:text="@string/delet_driver"
        android:tint="@color/white" />

</RelativeLayout>