<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView

        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:contentPadding="0dp">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/relative_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five"
                    android:orientation="horizontal"
                    android:weightSum="0">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/img_arrow"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_gravity="left|start"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:gravity="left|start"
                            android:padding="1dp"
                            android:text="@string/from" />

                        <TextView
                            android:id="@+id/txt_from_add"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_gravity="left|start"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:gravity="left|start"
                            android:padding="1dp"
                            android:text="NewYork NY 10025" />

                    </LinearLayout>


                    <ImageView
                        android:id="@+id/img_arrow"
                        android:layout_width="@dimen/arrow"
                        android:layout_height="@dimen/arrow"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:src="@drawable/arrow1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@+id/img_arrow"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/to"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:gravity="left|start"
                            android:text="@string/to"
                            tools:gravity="left|start" />


                        <TextView
                            android:id="@+id/txt_to_add"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:gravity="left|start"
                            android:maxLines="1"
                            android:padding="1dp"
                            android:text="Wooside NY 11104"
                            tools:gravity="left|start" />
                    </LinearLayout>


                </RelativeLayout>


            </RelativeLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/relative_parent"
                android:background="@android:color/darker_gray" />


            <RelativeLayout
                android:id="@+id/relative_parent1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_marginTop="@dimen/five"
                android:orientation="horizontal"
                android:weightSum="0">

                <LinearLayout
                    android:id="@+id/linear_layout_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/datee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="left|start"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:gravity="left|start"
                        android:padding="1dp"
                        android:text="@string/status" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/linear_layout_status"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Statuss"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="left|start"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:gravity="left|start"
                        android:padding="1dp"
                        android:text="Status"
                        android:textStyle="bold" />
                </LinearLayout>

                <!--                <LinearLayout-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_alignParentLeft="true"-->
                <!--                    android:layout_toLeftOf="@+id/img"-->
                <!--                    android:orientation="vertical">-->

                <!--                    -->
                <!--                    -->
                <!--                </LinearLayout>-->


                <View
                    android:id="@+id/img"
                    android:layout_width="@dimen/arrow"
                    android:layout_height="@dimen/arrow"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/five"

                    android:src="@drawable/arrow1" />


            </RelativeLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/relative_parent1"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:layout_marginTop="@dimen/five"
                android:orientation="horizontal"
                android:weightSum="0">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/MyAR_I_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:padding="10dp"
                        android:background="@drawable/ronded_button1"
                        android:text="@string/approve_payment_offline"
                        android:textSize="12sp"
                        android:visibility="gone"
                        android:textColor="@color/text_color" />


                </LinearLayout>


            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="258dp"
            android:layout_marginRight="6dp"
            android:layout_toRightOf="@+id/relativeLayout1"
            android:background="@color/white">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="7dp"
                android:src="@drawable/user_default"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp" />

<!--            <View-->
<!--                android:id="@+id/view2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_below="@+id/profile"-->
<!--                android:background="@android:color/darker_gray" />-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/drivername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|start"
                    android:text="@string/customer_name"
                    tools:gravity="left|start" />

                <TextView
                    android:id="@+id/txt_drivername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"
                    android:gravity="left|start"
                    android:maxLines="1"
                    android:padding="1dp"
                    android:text="ibrahim marie"
                    tools:gravity="left|start" />
            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>